[package]
name = "venial"
version = "0.5.0"
authors = ["Olivier Faure <olivier.cj.faure@gmail.com>"]
edition = "2021"
description = "A very small syn"
repository = "https://github.com/PoignardAzur/venial"
license = "MIT"
keywords = ["syn", "parsing", "proc-macro", "small", "derive"]
categories = ["development-tools::procedural-macro-helpers"]
exclude = ["*.snap"]

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"

[dev-dependencies]
insta = "1.12.0"
similar-asserts = "1.2.0"
